# pds-project

./: .env.example  .gitignore  GEMINI.md  PROGRESS.md  bootstrap.md  docker-compose.yml  monitor_resources.py  schema.sql
pds-data/: Dockerfile  README.md  pyproject.toml
pds-data/src/pds/: ALL_PROJECTS_DATASET_BUILD_FAILURE.csv  dashboard.py  pipeline.py  pymetrix.py  repository.py  tasks.py
pds-data/tests/: test_integrity.py  test_pymetrix.py
pds-model/: ALL_PROJECTS_COMBINED_build_failure_trf.csv  Dockerfile  README.md  pyproject.toml
pds-model/src/pds/: environment.py  orchestrator.py  pipeline.py  train.py
pds-model/tests/: test_db_pipeline.py
pds-service/: README.md  model_RFC_ROC_AUC_SMOTE.pkl  pyproject.toml  service_client.ipynb
pds-service/src/pds/: app.py  service.py
pds-service/src/pds/templates/: index.html
pds-service/tests/: test_app.py
