[project]
name = "pds-data"
version = "0.0.1"
description = "PDS - Pipeline de Dados"
authors = [
    {name = "Caio Braga", email = "8caiobraga8@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<4.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pds", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
