[project]
name = "pds-service"
version = "0.0.1"
description = "PDS - Service"
authors = [
    {name = "Lincoln Rocha",email = "lincoln@dc.ufc.br"}
]

requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.2,<1.7)",
    "imbalanced-learn (>=0.13.0)",
    "stable-baselines3 (>=2.5.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "gymnasium (>=0.29.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pg8000 (>=1.30.0,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pds", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
